changes to work my AWS kubernetes, my dockerhub and openjdk11 image and jdk