@@ -31,10 +31,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -61,9 +63,61 @@
 
     <build>
         <plugins>
+
+
+<!-- Added for JAVA 11 Support START-->
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.8.0</version>
+  <configuration>
+  <release>11</release>
+  </configuration>
+  <dependencies>
+  <dependency>
+    <!-- update compiler plugin dependency on ASM for Java 11 compatibility -->
+    <groupId>org.ow2.asm</groupId>
+    <artifactId>asm</artifactId>
+    <version>6.2</version>
+  </dependency>
+  </dependencies>
+</plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <configuration>
+    <argLine>
+    --illegal-access=permit
+    </argLine>
+  </configuration>
+</plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-failsafe-plugin</artifactId>
+    <configuration>
+    <argLine>
+    --illegal-access=permit
+    </argLine>
+  </configuration>
+</plugin>
+<!-- Added for JAVA 11 Support END-->
+
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.plexus</groupId>
+                        <artifactId>plexus-archiver</artifactId>
+                        <version>3.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>javax.activation-api</artifactId>
+                        <version>1.2.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
